# fluttertest

./: .env  .gitignore  README.md  SQLCreationQueries  flutter_launcher_icons.yaml  insertQueries.txt  pubspec.yaml
backend/src/: .env  .env.copy  .gitignore  README.md  backup.py  deployment.py  lambda_function.py  main.py  manage_trigger_migrations.py  package.txt  pyproject.toml  pytest.ini  test.py
backend/src/alembic/: .trigger_state.json  env.py
backend/src/api/: cronCheckAll.py  exceptions.py  routeCheckAll.py  table.py
backend/src/api/CHRON/:  notification-scheduler.py
backend/src/api/CRON/: notification-scheduler.py  notification_scheduler.py
backend/src/api/DELETE/: api_path_delete.py  api_paths_delete.py  http_router_delete.py
backend/src/api/DELETE/Category/: delete_Category_functions.py  delete_Category_table.py
backend/src/api/DELETE/Collectible/: delete_Collectible_functions.py  (+1 more)
backend/src/api/GET/: api_path_get.py  api_paths_get.py  http_router_get.py
backend/src/api/PATCH/: api_path_patch.py  api_paths_patch.py  http_router_patch.py
backend/src/api/POST/: api_path_post.py  api_paths_post.py  http_router_post.py
backend/src/database/: db.py  models.py  schemas.py  schemas_common.py
backend/src/database/doc/: MissionUserCreate_Update.sql  MissionUserCreation.sql  SQLCreationQueries.sql  insertNotificationUser.sql  insertQueries.sql
backend/src/tests/: conftest.py
backend/src/tests/api/: test_user_api.py
backend/src/tests/db/: test_user_crud.py
backend/src/tools/dev/: devTools.py
backend/src/tools/prod/: prodTools.py
(+528 files in other folders)
