[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "asyncio>=3.4.3",
    "boto3>=1.38.8",
    "cryptography>=45.0.2",
    "fastapi>=0.115.12",
    "logging>=0.4.9.6",
    "pydantic[email,timezone]>=2.11.4",
    "pymysql>=1.1.1",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
    "uvicorn[standard]>=0.34.2",
]
